--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <li>Beginner's Guide to Licking Sphincters</li>
       <li>Advantanced Strategies of Bungilingus</li>
     </ul>
+    <hr>
     <h3>Work Experience</h3>
     <table>
       <thead>
@@ -44,16 +45,7 @@
       </tbody>
     </table>
     <h3>Mad Skills</h3>
-    <table border="1">
-      <thead>
-        <tr>
-          <th>Skill</th>
-          <th>Rating</th>
-          <th>Skill</th>
-          <th>Rating</th>
-        </tr>
-      </thead>
-      <tbody>
+    <table cellspacing="10">
         <tr>
           <td>Circular</td>
           <td>****</td>
@@ -66,7 +58,6 @@
           <td>Insertion</td>
           <td>*****</td>
         </tr>
-      </tbody>
     </table>
     <hr>
     <a href="hobbies.html">My Hobbies</a>
