--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
         </tr>
     </table>
     <hr>
-    <a href="hobbies.html">My Hobbies</a>
-    <a href="contact.html">Contact My Ass</a>
-    <hr>
+    <h3><a href="hobbies.html">My Hobbies</a></h3>
+    <h3><a href="contact.html">Contact My Ass</a></h3>
     <hr>
   </body>
 </html>
