--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,25 @@
     <p>69 Bumpy Rd Ste D</p>
     <p>696-969-6969</p>
     <p>superlongtongue@aol.com</p>
+    <form action="mailto:superlongtongue@aol.com" method="post" enctype="text/plain">
+      <hr>
+      <table>
+        <tr>
+          <td><label>Your Name:</label></td>
+          <td><input type="text" name="Your Name"></td>
+        </tr>
+        <tr>
+          <td><label>Your Email:</label></td>
+          <td><input type="email" name="Your Email"></td>
+        </tr>
+        <tr>
+          <td><label>Your Message:</label></td>
+          <td><textarea name="Your Message" rows="10" cols="30"></textarea></td>
+          <td><input type="submit"></td>
+        </tr>
+      </table>
+
+    </form>
     <hr>
     <a href="index.html"><em>back</em></a>
   </body>
