--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </ul>
     <hr>
     <h3>Work Experience</h3>
-    <table>
+    <table cellspacing="10">
       <thead>
         <tr>
           <th>Dates</th>
@@ -39,11 +39,12 @@
           <td>Doctorate research in oral stimulation of the anus</td>
         </tr>
         <tr>
-          <td>2020</td>
+          <td>2019-Present</td>
           <td>Professor of Anal Stimulation at the University of Aslikt</td>
         </tr>
       </tbody>
     </table>
+    <hr>
     <h3>Mad Skills</h3>
     <table cellspacing="10">
         <tr>
