--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Glossa's Personal Page</title>
+    <link rel="stylesheet" href="classy.css">
   </head>
 
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="circleface.png" alt="A face made for assholes"></td>
+        <td><img src="images/circleface.png" alt="A face made for assholes" width="300" height="300"></td>
         <td><h1>Glossa Proktos</h1>
         <p><em>Founder and CEO of <strong><a href="asslickanon.html">Asslickers Anonymous</a></strong></em></p>
         <p>I am a sorry excuse for a human being and I enjoy licking assholes.</p></td>
