--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/circleface.png" alt="A face made for assholes" width="300" height="300"></td>
+        <td><img src="circleface.png" alt="A face made for assholes" width="300" height="300"></td>
         <td><h1>Glossa Proktos</h1>
         <p><em>Founder and CEO of <strong><a href="asslickanon.html">Asslickers Anonymous</a></strong></em></p>
         <p>I am a sorry excuse for a human being and I enjoy licking assholes.</p></td>
