--- a/asslickanon.html
+++ b/asslickanon.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Asslickers Anonymous</title>
+    <link rel="stylesheet" href="css/classy.css">
+    <style>
+      h1 {text-align: center;}
+    </style>
   </head>
+
   <body>
     <hr>
     <h1>Everybody Loves Licking Ass! Hurray!</h1>
