--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>My Contact Info</title>
+    <link rel="stylesheet" href="css/classy.css">
   </head>
+  
   <body>
     <h1>My Contact Info</h1>
     <p>69 Bumpy Rd Ste D</p>
